fix: changed overflow styles from scroll to auto

--- a/src/common/components/table/styles.module.scss
+++ b/src/common/components/table/styles.module.scss
@@ -8,7 +8,7 @@
 }
 
 .scroll {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .table {
